--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "mysql": "^2.18.1",
-    "redis": "^4.6.13"
+    "redis": "^4.6.13",
+    "xss": "^1.0.15"
   },
   "private": "true"
 }
